--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,10 @@
     <string name="sign_up_space">Sign up</string>
     <string name="already_have_an_account">Already have an account?</string>
     <string name="registeration_failed">Registration Failed</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="btn_Start">start</string>
+    <string name="past_list_of_trips">Past List of Trips</string>
+    <string name="past_trips">past trips</string>
+    <string name="upcoming_trips">upcoming trips</string>
 </resources>
