--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,7 +36,7 @@
     <string name="btn_Start">start</string>
     <string name="past_list_of_trips">Past List of Trips</string>
     <string name="past_trips">past trips</string>
-    <string name="upcoming_trips">upcoming trips</string>
+    <string name="upcoming_trips">Upcoming Trips</string>
     <string name="add_new_trip_button">Add Trip</string>
     <string name="trip_name">Trip Name</string>
     <string name="start_point">Start Point :</string>
@@ -66,5 +66,9 @@
 
     <string name="access_token">pk.eyJ1IjoiYW0zNzEyIiwiYSI6ImNranQxZzV6ODA5Ym8yeXFza2twcHk2c3gifQ.iBGtCdrUO8X3QufPn3C1Pg</string>
     <string name="save_edit_btn_txt">Save Edit</string>
+    <string name="history">History</string>
+    <string name="registration">Registration</string>
+    <string name="floating_button">Floating button</string>
+    <string name="mapped_trips">Mapped Trips</string>
 
 </resources>
