--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="forgot_password">Forgot Password?</string>
     <string name="login">Login</string>
     <string name="don_t_have_an_account">Don\'t have an account?</string>
-    <string name="sign_up">Signup</string>
+    <string name="sign_up">SIGN UP</string>
     <string name="app_logo">App Logo</string>
 
 
@@ -85,6 +85,9 @@
     <string name="trip_updated_success">Trip Updated Success</string>
     <string name="Trip_added_successfully">Trip Added Successfully</string>
     <string name="add_trip_title">ADD NEW TRIP</string>
+    <string name="login_title">LOGIN</string>
+    <string name="upcoming_title">UPCOMING TRIPS</string>
+    <string name="logout">LOGOUT</string>
 
 
 </resources>
