enhance some code

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -89,6 +89,7 @@
     <string name="login_title">LOGIN</string>
     <string name="upcoming_title">UPCOMING TRIPS</string>
     <string name="logout">LOGOUT</string>
+    <string name="no_upcoming_trips">No Upcoming Trips</string>
 
 
 </resources>
